--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-/* specific entry div selector */
-
+/* specific entry selector */
 div {
   padding: 10px;
-  background-color: #888888;
+  background-color: #EEEEEE;
 }
 
+/* specific date selector */
 p:nth-of-type(1) {
-  color: #222222;
+  color: #888888;
 }
 
 #wrapper {
   width: 60%;
-  background-color: #9F9F9F;
+  background-color: #DDDDDD;
 }
