--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ span:nth-of-type(1) {
   font-size: 0.7em;
 }
 
+/* specific class tag selector */
+span:nth-of-type(2) {
+  color: #EBB238;
+  font-size: 0.7em;
+}
+
 #wrapper {
   width: 45%;
   background-color: #DDDDDD;
