--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ span:nth-of-type(1) {
 
 /* specific class tag selector */
 span:nth-of-type(2) {
-  color: #EBB238;
+  color: #888888;
   font-size: 0.7em;
 }
 
