--- a/style.css
+++ b/style.css
@@ -8,13 +8,17 @@ div {
 /* specific date selector */
 span:nth-of-type(1) {
   color: #888888;
-  font-size: 0.7em;
+  font-size: 1em;
 }
 
 /* specific class tag selector */
 span:nth-of-type(2) {
   color: #888888;
-  font-size: 0.7em;
+  font-size: 1em;
+}
+
+span:nth-of-type(3) {
+  font-size: 1.5em;
 }
 
 #wrapper {
