--- a/style.css
+++ b/style.css
@@ -27,6 +27,6 @@ span:nth-of-type(3) {
   margin: 0px auto;
 }
 
-a:link {
-  text-decoration: none;
+a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
 }
